# concurrency-playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
concurrency/: 4_summator_good.cpp  5_future.cpp  CMakeLists.txt  concurrency.cpp  demo1.cpp  demo1.h  demo2.cpp  demo2.h  imagegen.h  pixel.h  platform.h  sdlrenderer.cpp  sdlrenderer.h
